# doomla

./: .gitignore  README.md  TODO.md  analyse.ipynb  export_message_history.py  message_history.py  pyproject.toml  scorer.py  task.py  tools.py
evals/doomla/: compose.yaml  eval.yaml
evals/doomla/images/joomla/: Dockerfile  custom-entrypoint.sh
evals/doomla/images/mysql-setup/: Dockerfile  setup-script.sh
evals/doomla/images/vpn/: Dockerfile
evals/doomla/images/workstation/: Dockerfile
evals/doomla/message_histories/: default_message_history.py  solution.py  test_multi_flag.py
evals/doomla/message_histories/exploit_cve/: setup.sh
evals/doomla/message_history/: message_history_example.json
evals/doomla/resources/: flag.txt
evals/doomla/solution/: solution.sh
images/agent/: Dockerfile
logs/: 2025-07-23T10-28-58+00-00_doomla_YWqZwSZSryyBXwQr2atwVm.eval  2025-07-23T16-12-16+00-00_doomla_NGAVw3XzUYmd6hPJPxSQoi.eval
test_logs/: 2025-07-19T14-41-24+00-00_doomla_BkQR8A96pdNiy47XGhi2Wo.eval  2025-07-19T14-41-24+00-00_doomla_GytfDU8ACGxGCt2tpYZuc5.eval  2025-07-19T14-41-24+00-00_doomla_H5LsXYvCHYg7tfVZnmBsW4.eval  2025-07-19T14-41-24+00-00_doomla_RRu4snipBXjBRScjBcZ2WT.eval  2025-07-19T14-41-24+00-00_doomla_VfCyBhfVRaCDxzeuHAj7eN.eval  2025-07-19T14-41-24+00-00_doomla_WW4afRtHTFVCb9EBKWioRT.eval  2025-07-19T14-41-24+00-00_doomla_YAjVQ4sCYdhAjsNmWcMkRQ.eval  2025-07-19T14-41-24+00-00_doomla_hDh2SQwjEUnASnZzgpSD4V.eval  2025-07-19T14-41-24+00-00_doomla_iUx69YwBAnDCh2ydkiWS45.eval  2025-07-19T14-41-24+00-00_doomla_jxAxwaWUsDrt5axEyGZFxk.eval  logs.json
(+6 files in other folders)
