[tool.poetry]
name = "doomla"
version = "0.1.0"
description = "Example cyber range using Inspect Cyber"
authors = ["UK AI Security Institute"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
inspect-ai = "^0.3.86"
inspect-cyber = "^0.1.0"
openai = "^1.82.0"
anthropic = "^0.52.2"
aisitools = {git = "ssh://git@github.com/AI-Safety-Institute/aisi-inspect-tools.git"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.7"
pytest-repeat = "^0.9.3"
ruff = "^0.6.0"
types-pyyaml = "^6.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # flake8
  "D",  # pydocstyle
  "I",  # isort
]
ignore = [
  "D212",  # multi-line-summary-first-line
]

[tool.ruff.lint.pydocstyle]
convention = "google"
